.deploy/Manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grade-book-microservice-deployment
  namespace: grade-book-microservice
  labels:
    app: grade-book-microservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grade-book-microservice-deployment
  template:
    metadata:
      name: grade-book-microservice-deployment
      labels:
        app: grade-book-microservice-deployment
    spec:
      containers:
        - name: web-application-deployment
          image: registry.gitlab.com/oleggolen/clean-architecture-ddd-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            timeoutSeconds: 5
            periodSeconds: 5
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              path: /api/v1/lessons
              port: 8080
            periodSeconds: 20
            timeoutSeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
