.deploy/Manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-book-db
  namespace: grade-book-microservice
spec:
  selector:
    app: grade-book-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
