.deploy/Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-book-microservice-service
  namespace: grade-book-microservice
spec:
  selector:
    app: grade-book-microservice-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
